# japan_etc

./: .env.example  .gitignore  .pdm.toml  README.MD  cli.py  etc.csv  log.txt  pyproject.toml
etc/: db.py  etc.py  utils.py
